# frappe-demo-ui

./: .pre-commit-config.yaml  README.md  build.json  pyproject.toml
.github/workflows/: ci.yml
my-dashboard/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.js
my-dashboard/src/: App.vue  env.d.ts  index.css  main.ts  router.ts
my-dashboard/src/components/: CrmSidebar.vue  Dashboard.vue  Navbar.vue  PaymentRequestModal.vue  Sidebar.vue  UserList.vue
my-dashboard/src/components/Customer/: CustomerBottomNav.vue  CustomerCheckoutDialog.vue  CustomerNavbar.vue  CustomerOrdersTab.vue  CustomerShopTab.vue  CustomerSidebar.vue  CustomerSidebarmenu.vue  CustomerSubscriptionModal.vue  CustomerSubscriptionsTab.vue
my-dashboard/src/components/Seller/: Deliverynote.vue  PaymentEntryList.vue  SalesInvoiceList.vue  SalesOrder.vue  SellerCombinedList.vue  SellerCreateInvoiceDialog.vue  (+8 more)
my-dashboard/src/composables/: useRealtime.ts
my-dashboard/src/pages/: Home.vue
my-dashboard/src/stores/: customer.ts
my_frappe_app/: api.py  hooks.py  modules.txt  payment_utils.py  utils.py
my_frappe_app/fixtures/: custom_field.json  doctype.json  print_format.json  property_setter.json
my_frappe_app/public/: frontend
my_frappe_app/public/dashboard/: Home.js  dashboard  index.css  index.html  index.js
my_frappe_app/public/frontend/: CustomerHome.js  Home.js  SellerHome.js  SellerHomeComponent.css  SellerHomeComponent.js  index.css  index.html  index.js  truck.js
my_frappe_app/templates/pages/: frontend.html  frontend.py
(+4 files in other folders)
