[project]
name = "my_frappe_app"
authors = [
    { name = "Harsh Prajapati", email = "harsh.prajapati@uvtechglobal.com"}
]
description = "my_frappe_app"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "frappe>=16.0.0-dev,<17.0.0"
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "UP",
    "B",
    "RUF",
]
ignore = [
    "B017", "B018", "B023", "B904", "E101", "E402", "E501", 
    "E741", "F401", "F403", "F405", "F722", "W191", 
    "UP030", "UP031", "UP032", "UP037", "UP040",
]
typing-modules = ["frappe.types.DF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true